--- a/html&css/maintenance/style.css
+++ b/html&css/maintenance/style.css
@@ -7,9 +7,9 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
-    background: url() no-repeat center center/cover;
+    background: url(maintenace3.jpg) no-repeat center center/cover;
 min-height: 100vh;   
-background-color: rgba(0, 0, 0, 0.5); 
+background-color: rgba(0, 0, 0, 0.3); 
 }
 .container{
     position: absolute;
@@ -19,16 +19,16 @@ background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
 }
 h1{
-    font-size: 4em;
+    font-size: 4rem;
     margin-bottom: 20px;
 }
 p{
-    font-size: 1.75em;
+    font-size: 1.75rem;
 }
 .social ul {
     display: flex;
    flex-direction: row;
-    font-size: 2em;
+    font-size: 2rem;
     justify-content: end;
 }
 a{
